added baseline html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,48 @@
     </header>
 
     <main>
+        <section id="designer-section">
+            <label for="name">NAME</label>
+            <input id="name">
+            <label for="environment">ENVIRONMENT</label>
+            <select id="environment">
+                <option value="mountains">Mountains</option>
+                <option value="polar">Polar</option>
+                <option value="desert">Desert</option>
+                <option value="tropical">Tropical</option>
+            </select>
+            <label for="architecture">ARCHITECTURE</label>
+            <select id="architecture">
+                <option value="deco">Art Deco</option>
+                <option value="modern">Modern</option>
+                <option value="beaux">Beaux Arts</option>
+                <option value="gothic">Gothic</option>
+            </select>
+            <label for="slogan">SLOGAN</label>
+            <textarea id="slogan"></textarea>
+        </section>
+
+        <section id="city-section">
+            <h2></h2>
+            <img src="">
+            <p></p>
+        </section>
+
+        <section id="cities-section">
+            <table>
+                <thead>
+                    <tr>
+                        <td>City Name</td>
+                        <td>Environment</td>
+                        <td>Architecture</td>
+                        <td>Number of Slogans</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    
+                </tbody>
+            </table>
+        </section>
 
     </main>
 
