added baseline css

--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
             </select>
             <label for="slogan">SLOGAN</label>
             <textarea id="slogan"></textarea>
+            <button>Add To List</button>
         </section>
 
         <section id="city-section">
             <h2></h2>
-            <img src="">
+            <div id="city-image-container">
+                <img src="">
+                <img src="">
+            </div>
             <p></p>
         </section>
 
@@ -57,7 +61,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    
+
                 </tbody>
             </table>
         </section>
