added addSlogan button with event listener

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             </select>
             <label for="slogan">SLOGAN</label>
             <textarea id="slogan"></textarea>
-            <button>Add To List</button>
+            <button id="add-slogan">Add Slogan</button>
+            <button>Add City To List</button>
         </section>
 
         <section id="city-section">
