non-empty slogans displaying on add slogan click

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
             <p></p>
         </section>
 
+        <section id="slogan-section">
+            <h3>Other Slogans:</h3>
+            <ul></ul>
+        </section>
+
         <section id="cities-section">
             <table>
                 <thead>
