load button loading saved cities

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                         <td>Environment</td>
                         <td>Architecture</td>
                         <td>Number of Slogans</td>
+                        <td>Load</td>
                     </tr>
                 </thead>
                 <tbody>
