fixed loaded city slogans bug, styling changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
             <ul></ul>
         </section>
 
+
         <section id="cities-section">
+            <h3>Added Cities</h3>
             <table>
                 <thead>
                     <tr>
