added clear slogans button, button styling corresponds to city environment

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             <ul></ul>
         </section>
 
+        <section id="reset">
+            <button>Clear Slogans</button>
+        </section>
 
         <section id="cities-section">
             <h3>Added Cities</h3>
